policies/kyverno/base/verify-image-signatures.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signatures
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  rules:
    - name: require-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - apps
      verifyImages:
        - imageReferences:
            - "ghcr.io/gabrielldn/*"
          mutateDigest: false
          required: true
          verifyDigest: true
          attestors:
            - count: 1
              entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      REPLACE_WITH_COSIGN_PUBLIC_KEY
                      -----END PUBLIC KEY-----
